# multik

./: .gitignore  LICENSE  README.md  build.gradle  build.gradle.kts  dummy.txt  gradle.properties  index.html  navigation.html  settings.gradle  settings.gradle.kts
benchmarks/: build.gradle.kts
docs/: c.list  mdoc.tree  mk.tree  project.ihp  v.list
docs/cfg/: buildprofiles.xml
docs/topics/: FAQ.md  additional-resources-and-links.md  community-and-contribution-guidelines.md  examples.md  home.topic  overview.md  project-repository.md  release-notes-and-updates.md  welcome.topic
gradle/: dokka.gradle  maven-metadata.gradle  multik_jni-cmake.gradle  openblas.gradle  publish-mpp-root-module-in-platform.gradle  publish.gradle
gradle/wrapper/: gradle-wrapper.properties
multik-api/: build.gradle.kts  index.html  package-list
multik-api/org.jetbrains.kotlinx.multik.api/: abs.html  arange.html  d1array.html  d2array.html  d3array.html  d4array.html  dnarray.html  empty.html  identity.html  index.html  linspace.html  ndarray-of.html  ndarray.html  to-ndarray.html
multik-api/org.jetbrains.kotlinx.multik.ndarray.data/: -v.html  -w.html  as-d-n-array.html  compare-to.html  dimension-class-of.html  dimension-of.html  down-to.html  get.html  index.html  init-memory-view.html  mutable-view.html  r.html  range-to.html  set.html  slice.html  step.html  to-primitive-type.html  to-view-primitive-array.html  view.html  zero-number.html
multik-api/org.jetbrains.kotlinx.multik.ndarray.operations/: abs.html  all.html  any.html  as-sequence.html  associate-by-to.html  associate-by.html  associate-to.html  associate-with-to.html  associate-with.html  associate.html  average.html  ceil.html  chunked.html  contains.html  cos.html  count.html  distinct-by.html  distinct.html  div-assign.html  div.html  drop-while.html  drop.html  filter-indexed.html  filter-not.html  filter.html  find-last.html  find.html  first-or-null.html  first.html  flat-map-indexed.html  flat-map.html  fold-indexed.html  fold.html  for-each-indexed.html  for-each.html  group-ndarray-by-to.html  group-ndarray-by.html  grouping-ndarray-by.html  index-of-first.html  index-of-last.html  (+48 more)
multik-core/: build.gradle.kts  package-list
multik-core/org.jetbrains.kotlinx.multik.api/: [common]rand.html  arange.html  d1array.html  d2array-indices.html  d2array.html  d3array-indices.html  d3array.html  d4array-indices.html  d4array.html  dnarray.html  empty.html  engines-provider.html  engines-store.html  engines.html  identity.html  index.html  linspace.html  meshgrid.html  ndarray-of.html  ndarray.html  ones.html  rand.html  to-n-d-array.html  zeros.html
multik-core/org.jetbrains.kotlinx.multik.api.io/: index.html  read-delim.html  read-raw.html  read.html  write-c-s-v.html  write.html
multik-core/org.jetbrains.kotlinx.multik.api.linalg/: dot.html  eig-vals.html  eig.html  index.html  inv.html  norm.html  plu.html  qr.html  solve.html
multik-core/org.jetbrains.kotlinx.multik.api.math/: arg-max.html  arg-min.html  cos.html  cum-sum.html  exp.html  index.html  log.html  sin.html
multik-core/org.jetbrains.kotlinx.multik.api.stat/: abs.html  index.html
multik-core/org.jetbrains.kotlinx.multik.ndarray.complex/: all.html  any.html  as-iterable.html  as-list.html  as-sequence.html  associate-by-to.html  associate-by.html  associate-to.html  associate-with-to.html  associate-with.html  associate.html  complex-double-array-of.html  complex-float-array-of.html  component1.html  component2.html  component3.html  component4.html  component5.html  conj.html  contains.html  content-equals.html  content-hash-code.html  copy-into.html  copy-of-range.html  copy-of.html  count.html  distinct-by.html  distinct.html  div.html  drop-last-while.html  drop-last.html  drop-while.html  drop.html  element-at-or-else.html  element-at-or-null.html  element-at.html  fill.html  filter-indexed-to.html  filter-indexed.html  filter-not-to.html  (+109 more)
multik-core/org.jetbrains.kotlinx.multik.ndarray.data/: -v.html  -w.html  [common]get.html  [common]set.html  as-d-n-array.html  bounds.html  check-bounds.html  compare-to.html  dimension-class-of.html  dimension-of.html  down-to.html  first.html  get.html  index.html  init-memory-view.html  last.html  mutable-view.html  r.html  range-to.html  require-elements-with-shape.html  set.html  slice.html  step.html  to-primitive-type.html  to-slice.html  to-view-primitive-array.html  view.html  writable-view.html  zero-number.html
multik-core/org.jetbrains.kotlinx.multik.ndarray.operations/: abs.html  all.html  and.html  any.html  append.html  as-sequence.html  associate-by-to.html  average.html  (+111 more)
multik-cuda/: README.md  build.gradle.kts
multik-default/: build.gradle.kts
multik-jvm/: build.gradle.kts
multik-kotlin/: build.gradle.kts
multik-native/: build.gradle  build.gradle.kts
multik-native/multik_jni/: CMakeLists.txt  build.gradle.kts
multik-native/multik_jni/src/main/cpp/: ComplexDouble.cpp  jni_JniMath.cpp  jni_Linalg.cpp  mk_linalg.cpp  mk_math.cpp
multik-native/multik_jni/src/main/headers/: ComplexDouble.h  ComplexFloat.h  jni_JniLinAlg.h  jni_JniMath.h  mk_linalg.h  mk_math.h
multik-openblas/: build.gradle.kts
multik-openblas/multik_jni/: CMakeLists.txt
multik-openblas/multik_jni/src/main/cpp/: ComplexDouble.cpp  ComplexFloat.cpp  JniStat.cpp  jni_JniMath.cpp  jni_Linalg.cpp  mk_linalg.cpp  mk_math.cpp  mk_stat.cpp
multik-openblas/multik_jni/src/main/headers/: ComplexDouble.h  ComplexFloat.h  JniStat.h  jni_JniLinAlg.h  jni_JniMath.h  mk_linalg.h  mk_stat.h
scripts/: navigation-pane.json  pages.js  pages.json  sourceset_dependencies.js
src/jni_multik/: CMakeLists.txt
src/jni_multik/cpp/: jni_Linalg.cpp  ndarray.cpp  org_jetbrains_multik_jni_JniMath.cpp
src/jni_multik/headers/: _ndarray.h  mk_linalg.h  mk_math.h  ndarray.h  org_jetbrains_multik_jni_JniLinAlg.h
src/multik_jni/: CMakeLists.txt
src/multik_jni/cpp/: jni_Linalg.cpp  org_jetbrains_multik_jni_JniMath.cpp
src/multik_jni/headers/: mk_linalg.h  org_jetbrains_multik_jni_JniLinAlg.h  org_jetbrains_multik_jni_JniMath.h
(+1674 files in other folders)
